后端：视频上传和下载接口完成编写-------016

--- a/Demo1-Server/src/main/resources/application.yml
+++ b/Demo1-Server/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
         max-idle: 10
         min-idle: 1
         time-between-eviction-runs: 10s
+
+  servlet:
+    multipart:
+      max-file-size: 512MB
+      enabled: true
+      max-request-size: -1
+      resolve-lazily: true
