--- a/Demo1-Server/pom.xml
+++ b/Demo1-Server/pom.xml
@@ -75,6 +75,12 @@
         </dependency>
         <!-- spring2.X集成redis所需common-pool2，使用jedis必须依赖它-->
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
