--- a/Demo1-Server/pom.xml
+++ b/Demo1-Server/pom.xml
@@ -81,6 +81,20 @@
             <version>1.3.3</version>
         </dependency>
 
+        <!-- JavaCV -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+
+        <!-- OpenCV -->
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.3.0-1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
