--- a/Demo1-Server/src/main/resources/application.yml
+++ b/Demo1-Server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://ecs.016imcn.love:3306/well-matched-team?serverTimezone=UTC
-    username: 016
+    username: '016'
     password: 'MySql@016016'
   redis:
     host: 119.23.49.102
